tests/snapshots/fixtures__fixture@lsp__directives__identifiers_unexpected_tokens_err.snap
---
source: tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace body:
    (workspace_block
      (identifiers_directive value:
        (identifier))
      (ERROR
        (UNEXPECTED 'l'))
      (model body:
        (model_block
          (software_system identifier:
            (identifier) name:
            (string)))))))
